fix: alignment text of services desc

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2500,7 +2500,7 @@ html, body, .homepage-body {
     white-space: normal;
   }
 
-  .service-desc {
+  .service-block p {
     font-size: 15px !important;
     text-align: justify !important;
     justify-content: inter-word !important;
